Implementasjon av generelt brev Scenario for opphør pga dødsfall
Signed-off-by: Qadeer Khan <qadeer.ahmad.khan@nav.no>